# watchpass

./: .gitignore  CONTRIBUTING.md  README.md
cloud-init/: jazzy.yaml  mediamtx.yml
docs/: design_generic_transport.md
src/watchpass_bringup/: CMakeLists.txt  package.xml
src/watchpass_bringup/config/: fastdds_shm.xml  params.yaml
src/watchpass_bringup/launch/: chained.launch.py  sim.launch.py  stream.launch.py
src/watchpass_bringup/worlds/: watchpass_camera.sdf
src/watchpass_framework/: CMakeLists.txt  package.xml
src/watchpass_framework/include/watchpass_framework/: frame_consumer_node.hpp  frame_format.hpp  frame_processor_node.hpp  frame_source.hpp  frame_view.hpp
src/watchpass_framework/src/: frame_consumer_node.cpp  frame_processor_node.cpp  frame_view.cpp
src/watchpass_msgs/: CMakeLists.txt  package.xml
src/watchpass_msgs/msg/: WatchFrame.msg.in  WatchFrameHandle.msg
src/watchpass_nodes/: CMakeLists.txt  package.xml
src/watchpass_nodes/src/: flip_node.cpp  grayscale_node.cpp
src/watchpass_streamer/: CMakeLists.txt  package.xml
src/watchpass_streamer/include/watchpass_streamer/: ffmpeg_pipe.hpp  ros_image_source.hpp  v4l2_source.hpp
src/watchpass_streamer/scripts/: stream_ffmpeg.sh
src/watchpass_streamer/src/: camera_bridge_node.cpp  ffmpeg_pipe.cpp  ffmpeg_streamer_node.cpp  ros_image_source.cpp  v4l2_source.cpp
