<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchpass_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, DDS shared-memory config, and a demo Gazebo world for the
    Watchpass zero-copy camera streaming pipeline.
  </description>
  <maintainer email="muhammaddaffadinaya@gmail.com">Muhammad Daffa Dinaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>watchpass_streamer</exec_depend>
  <exec_depend>watchpass_nodes</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Simulation demo dependencies. -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
