<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchpass_streamer</name>
  <version>0.1.0</version>
  <description>
    Zero-copy camera bridge and ffmpeg streaming nodes for Watchpass. Ingests
    frames into loaned WatchFrame buffers and pipes raw pixels to ffmpeg for
    WebRTC/RTSP/RTP delivery.
  </description>
  <maintainer email="muhammaddaffadinaya@gmail.com">Muhammad Daffa Dinaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>watchpass_msgs</depend>
  <depend>watchpass_framework</depend>

  <!-- Runtime dependency for the encoder/transport stage. -->
  <exec_depend>ffmpeg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
